=======
CHANGES
=======

------
0.5.1
------

Added ability to show error bars
Meta data now saved with project files - allows saving plots
Add table to plot

------
0.5.0
------

Model fitting interface using statsmodels
Added ability to create/edit categorical columns
Clean data options added
Dialog to apply row-wise functions added to column menu
String operations added to column menu
Correlation matrix calculator
Re-did aggregate dialog
Row index header to show index names
Display column multiiindexes
Cell text now fits columns properly for all sizes
Convenient copy and paste table menu items for DataExplore
Added minimal unit tests

------
0.4.2
------

Added plot save dpi entry
Fixed missing data files for setuptools install
Updated scatter to allow multiple subplots

------
0.4.1
------

Improved datasets
Fix to update group comboboxes
Added batch file renaming tool

------
0.4.0
------

Can now display and set row multiindexes
Added function evaluation tool
Grouped plots now work
Can now sort by multiple columns
Can set column dtype
Show table as formatted text
Fixed copy to clipboard
Fix to import dialog error
improvements to pivot,aggregate dialogs

------
0.3.1
------

Fixed relative imports

------
0.3.0
------

Added ability to create sub/child table
Merge and concat with sub tables
Removed row/col buttons from toolbar to prevent clutter
Added filtering using string queries; pandas query()
Rendering and handling of empty tables
Can now hide plot viewer in dataexplore app

------
0.2.0
------

Added dataframe index display in row header
Ability to reset index
Added hexbin plot
Added iris.data for tests
Fixes for subplots layout
Improved histogram plots
Aggregate, pivot tools added
freeze script for windows binary

------
0.0.1
------

Ported old tkintertable code to Python3
Removed old extraneous TableModel code
Added PlotFrame class
Re-did table viewer application
No longer using Pmw widgets